--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
   <string name="app_name">WeatherApp</string>
 
   <string name="cel">38\u00B0</string>
+  <string name="weekly_forecast_title">Weekly Forecast</string>
+  <string name="today_s">Today\'s</string>
+
+
+  <!--Date templates-->
+  <string name="today">Today</string>
+  <string name="tomorrow">Tomorrow</string>
 </resources>
